src/main/java/semantic/abstractSintaxTree/test/passing/nilArray.ru
start {
    Array Int a;
    a = nil;
}
