src/main/java/semantic/abstractSintaxTree/test/failing/undefinedVariableAccess.ru
/? UndeclaredVariableAccessException
start {
    a = 1;
}